# fractal_raytracer

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt
patch/: acTL.patch  symbols.patch
resources/: Point.json  Vector.json  light_scene.json  result_scene_1.json
resources/tests/Object/: Camera.json  Cube.json  Light.json  MeshObject.json  Sphere.json  Transform.json
resources/tests/Scene/: Cameras.json  Lights.json  Objects.json  Scene.json
src/Image/: Color.hpp  Image.cpp  Image.hpp  PNG.cpp  PNG.hpp
src/Material/: Material.hpp  UniformMaterial.cpp  UniformMaterial.hpp
src/Menger/: Menger.cpp  Menger.hpp
src/Object/: MeshObject.cpp  MeshObject.hpp  Plane.hpp  Sphere.cpp  Sphere.hpp  Transform.hpp
src/Object/Box/: Box.cpp  Box.hpp  CubeBox.cpp  CubeBox.hpp
src/Object/Camera/: Camera.cpp  Camera.hpp
src/Object/Cube/: Cube.cpp  Cube.hpp
src/Object/Light/: Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp
src/Object/Triangle/: Triangle.cpp  Triangle.hpp
src/Profiler/: Profiler.cpp  Profiler.hpp
src/Pyramide/: Pyramide.cpp  Pyramide.hpp
src/Scene/: Ray.hpp  Scene.cpp  Scene.hpp
src/Scene/Factory/: Dictionary.cpp  Dictionary.hpp  Factory.hpp
src/Vector/: Vector.cpp  Vector.hpp
tests/: Parser.hpp
tests/Light/PointLight/: PointLight.cpp
tests/Menger/: MengerTest.cpp
tests/Object/: CameraTest.cpp  CubeBoxTest.cpp  CubeTest.cpp  MeshObjectTest.cpp  SphereTest.cpp  TransformTest.cpp
tests/Pyramide/: PyramideTest.cpp
tests/Scene/: Scene.cpp
tests/Triangle/: TriangleTest.cpp
tests/Vector/: Vector.cpp
